--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ development:
   database: App_ROR_development
   pool: 5
   username: root
-  password:
+  password: 1234
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
@@ -26,7 +26,7 @@ test:
   database: App_ROR_test
   pool: 5
   username: root
-  password:
+  password: 1234
   host: localhost
 
 production:
@@ -35,5 +35,5 @@ production:
   database: App_ROR_production
   pool: 5
   username: root
-  password:
+  password: 1234
   host: localhost
